Implemente lo mismo q en direccion en paciente, lo de los DTOs y eso